--- a/papaya-security-browser/src/main/resources/resources/browser-login.html
+++ b/papaya-security-browser/src/main/resources/resources/browser-login.html
@@ -29,5 +29,25 @@
         </tr>
     </table>
 </form>
+
+短信验证码页面
+
+<form action="/authentication/mobile" method="post">
+    <table>
+        <tr>
+            <td>手机号</td>
+            <td><input type="text" name="mobile"></td>
+        </tr>
+        <tr>
+            <td>验证码</td>
+            <td><input type="text" name="code"></td>
+        </tr>
+
+        <tr>
+            <td></td>
+            <td><input type="submit" value="提交"></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
