--- a/papaya-security-demo/src/main/resources/resources/demo-signup.html
+++ b/papaya-security-demo/src/main/resources/resources/demo-signup.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td></td>
-            <td> <input type="submit"  value="注册"><input type="submit" value="绑定"></td>
+            <td> <button type="submit" name="type" value="regist">注册</button></td>
         </tr>
     </table>
 </form>
