--- a/papaya-security-browser/src/main/resources/resources/browser-login.html
+++ b/papaya-security-browser/src/main/resources/resources/browser-login.html
@@ -7,7 +7,7 @@
 <body>
 标准登陆页面
 
-<form action="/authentication/form" method="post">
+<form action="/authentication/form1" method="post">
     <table>
         <tr>
             <td>用户名</td>
