--- a/papaya-security-demo/src/main/resources/resources/demo-signup.html
+++ b/papaya-security-demo/src/main/resources/resources/demo-signup.html
@@ -7,7 +7,7 @@
 <body>
 标准注册页面
 
-<form action="/user/register" method="post">
+<form action="/user/regist" method="post">
     <table>
         <tr>
             <td>用户名</td>
